# trade-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.js.test  Dockerfile.test  README.md  docker-compose.integration.yml  docker-compose.js.test.yml  docker-compose.yml  jest.config.js  package.json  pyproject.toml  requirements.txt
.github/: SYNC_IMPLEMENTATION_PLAN.md
.github/scripts/: jest.config.cjs  package-lock.json  package.json
.github/workflows/: project-v2-trigger.yml  sync-local-to-project.yml  sync-project-to-local.yml  test-project-v2-events.yml  validate-workflows.sh
.project/docs/: ai_integration.md  customization.md  setup.md  workflow.md
.project/scripts/: github_setup.ps1  setup.ps1  update_status.ps1
.project/status/: DEVELOPMENT_STATUS.yaml  DEVELOPMENT_STATUS.yaml.bak
docs/: active_inference.md  airflow-integration-guide.md  airflow-integration-implementation-plan.md  setup-prompt.md  system_components.md
examples/: paper_trading_example.py
src/: __init__.py
src/__tests__/: sample.test.js
src/analysis/: __init__.py  market_analyzer.py
src/api/: __init__.py  main.py  market_analysis_client.py  models.py
src/brokers/: base_broker.py  interactive_brokers_adapter.py
src/config/: trading_config.py
src/core/: __init__.py  config.py  health.py  market_types.py  monitoring.py  portfolio.py  risk_manager.py  system_state.py  trade_engine.py  trading_session.py
src/strategy/: portfolio_optimizer.py  trade_optimizer.py  unified_optimizer.py
tests/: conftest.py
tests/api/: test_endpoints.py
(+27 files in other folders)
